implemented ServerFacade and tests fully